[gd_scene load_steps=34 format=2]

[ext_resource path="res://actor_framework/Actor.tscn" type="PackedScene" id=1]
[ext_resource path="res://actor_states/motion/Spawn.tscn" type="PackedScene" id=2]
[ext_resource path="res://actor_states/motion/Die.tscn" type="PackedScene" id=3]
[ext_resource path="res://actor_states/motion/LaunchStagger.tscn" type="PackedScene" id=4]
[ext_resource path="res://actor_states/ai_states/Wait.tscn" type="PackedScene" id=5]
[ext_resource path="res://actors/maid_share/Pivot.tscn" type="PackedScene" id=6]
[ext_resource path="res://actor_states/ai_states/AIAttack.tscn" type="PackedScene" id=7]
[ext_resource path="res://actor_states/motion/Stagger.tscn" type="PackedScene" id=8]
[ext_resource path="res://actors/maid_share/boss/ShareBoss.tres" type="Resource" id=9]
[ext_resource path="res://actors/maid_share/boss/ShareTurretSpawner1.tscn" type="PackedScene" id=10]
[ext_resource path="res://actors/maid_share/boss/ShareTurretSpawner.tscn" type="PackedScene" id=12]
[ext_resource path="res://actor_states/Sequence.tscn" type="PackedScene" id=13]
[ext_resource path="res://actors/maid_share/boss/StateMachine.gd" type="Script" id=15]
[ext_resource path="res://actor_states/ai_states/Run.tscn" type="PackedScene" id=17]
[ext_resource path="res://actors/maid_share/boss/ShareTurretSpawner2.tscn" type="PackedScene" id=19]
[ext_resource path="res://core/Cutscene.tscn" type="PackedScene" id=20]
[ext_resource path="res://interactable_scripts/base/DialogueInteraction.tscn" type="PackedScene" id=21]
[ext_resource path="res://cutscenes/CutsceneCamera.tscn" type="PackedScene" id=22]
[ext_resource path="res://actor_states/ai_states/Teleport.tscn" type="PackedScene" id=23]
[ext_resource path="res://actors/maid_share/boss/ShareBossSpinBackflip.tscn" type="PackedScene" id=24]
[ext_resource path="res://actors/maid_share/boss/states/SpawnTurretSequence.tscn" type="PackedScene" id=25]
[ext_resource path="res://actors/maid_share/boss/states/SpinAttackSequence.tscn" type="PackedScene" id=26]
[ext_resource path="res://core/ActivateSkill.tscn" type="PackedScene" id=27]
[ext_resource path="res://actors/maid_share/boss/states/SpinBackflipSequence.tscn" type="PackedScene" id=30]
[ext_resource path="res://actors/maid_share/boss/states/BackflipSequence.tscn" type="PackedScene" id=31]

[sub_resource type="CircleShape2D" id=1]
resource_local_to_scene = true
radius = 200.0

[sub_resource type="Animation" id=2]
resource_name = "SETUP"
length = 0.001

[sub_resource type="Animation" id=3]
resource_name = "end"
tracks/0/type = "method"
tracks/0/path = NodePath("ActivateSkill")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "activate"
} ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("CutsceneCamera")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 1.0 ],
"method": "disable"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("../Pivot/AnimationPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "jump_disappear", -1, 1.0, false ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "start"
length = 3.0
tracks/0/type = "method"
tracks/0/path = NodePath("MSG_Interaction")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "" ],
"method": "start"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../ActorDebugInterface:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("CutsceneCamera")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 1.0 ],
"method": "enable"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("PlayerCutsceneManager")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [ "stand" ],
"method": "play_animation"
}, {
"args": [ "stand" ],
"method": "play_animation"
}, {
"args": [ "stand" ],
"method": "play_animation"
} ]
}

[sub_resource type="RectangleShape2D" id=5]
resource_local_to_scene = true
extents = Vector2( 256, 256 )

[sub_resource type="CircleShape2D" id=6]
resource_local_to_scene = true
radius = 200.0

[sub_resource type="RectangleShape2D" id=7]
resource_local_to_scene = true
extents = Vector2( 45.3868, 85.6366 )

[sub_resource type="RectangleShape2D" id=8]
resource_local_to_scene = true
extents = Vector2( 41.9573, 87.6501 )

[node name="ShareBoss" groups=[
"enemies",
] instance=ExtResource( 1 )]

[node name="Pivot" parent="." index="0" instance=ExtResource( 6 )]

[node name="DieCutscene" parent="." index="1" instance=ExtResource( 20 )]

[node name="MSG_Interaction" parent="DieCutscene" index="0" instance=ExtResource( 21 )]
json_name = "share_boss_end.json"

[node name="InteractionArea" parent="DieCutscene/MSG_Interaction" index="0"]
visible = false

[node name="CollisionShape2D" parent="DieCutscene/MSG_Interaction/InteractionArea" index="0"]
shape = SubResource( 1 )
disabled = true

[node name="MSG_pos" parent="DieCutscene/MSG_Interaction" index="1"]
position = Vector2( 0, -257.041 )

[node name="CutsceneCamera" parent="DieCutscene" index="1" instance=ExtResource( 22 )]
position = Vector2( 0, -386.358 )
zoom = Vector2( 1.4, 1.4 )

[node name="ActivateSkill" parent="DieCutscene" index="2" instance=ExtResource( 27 )]
skill = "ShotgunBlast"

[node name="AnimationPlayer" parent="DieCutscene" index="3"]
anims/SETUP = SubResource( 2 )
anims/end = SubResource( 3 )
anims/start = SubResource( 4 )

[node name="CollisionShape2D" parent="DieCutscene/CollisionTrigger" index="0"]
shape = SubResource( 5 )

[node name="InteractionArea" parent="DieCutscene" index="6"]
visible = false

[node name="CollisionShape2D" parent="DieCutscene/InteractionArea" index="0"]
shape = SubResource( 6 )
disabled = true

[node name="StateMachine" parent="." index="2"]
script = ExtResource( 15 )
pause_offscreen = false

[node name="Spawn" parent="StateMachine" index="0" instance=ExtResource( 2 )]
next_state = "OpeningSequence"

[node name="OpeningSequence" parent="StateMachine" index="1" instance=ExtResource( 13 )]

[node name="SpawnTurretSequence" parent="StateMachine/OpeningSequence" index="0" instance=ExtResource( 25 )]

[node name="SpinAttackSequence" parent="StateMachine/OpeningSequence" index="1" instance=ExtResource( 26 )]

[node name="SpinBackflipSequence" parent="StateMachine/OpeningSequence" index="2" instance=ExtResource( 30 )]

[node name="BackflipSequence" parent="StateMachine/OpeningSequence" index="3" instance=ExtResource( 31 )]

[node name="Wait" parent="StateMachine/OpeningSequence" index="4" instance=ExtResource( 5 )]

[node name="Sequence1" parent="StateMachine" index="2" instance=ExtResource( 13 )]

[node name="SpawnTurretSequence" parent="StateMachine/Sequence1" index="0" instance=ExtResource( 25 )]

[node name="SpinBackflipSequence" parent="StateMachine/Sequence1" index="1" instance=ExtResource( 30 )]

[node name="SpawnTurretSequence2" parent="StateMachine/Sequence1" index="2" instance=ExtResource( 25 )]

[node name="SpinAttackSequence" parent="StateMachine/Sequence1" index="3" instance=ExtResource( 26 )]

[node name="BackflipSequence" parent="StateMachine/Sequence1" index="4" instance=ExtResource( 31 )]

[node name="Sequence2" parent="StateMachine" index="3" instance=ExtResource( 13 )]

[node name="SpawnTurretSequence" parent="StateMachine/Sequence2" index="0" instance=ExtResource( 25 )]

[node name="SpinBackflipSequence" parent="StateMachine/Sequence2" index="1" instance=ExtResource( 30 )]

[node name="SpawnTurretSequence2" parent="StateMachine/Sequence2" index="2" instance=ExtResource( 25 )]

[node name="SpinAttackSequence" parent="StateMachine/Sequence2" index="3" instance=ExtResource( 26 )]

[node name="BackflipSequence" parent="StateMachine/Sequence2" index="4" instance=ExtResource( 31 )]

[node name="Sequence3" parent="StateMachine" index="4" instance=ExtResource( 13 )]

[node name="SpawnTurretSequence" parent="StateMachine/Sequence3" index="0" instance=ExtResource( 25 )]

[node name="SpinBackflipSequence" parent="StateMachine/Sequence3" index="1" instance=ExtResource( 30 )]

[node name="SpawnTurretSequence2" parent="StateMachine/Sequence3" index="2" instance=ExtResource( 25 )]

[node name="SpinAttackSequence" parent="StateMachine/Sequence3" index="3" instance=ExtResource( 26 )]

[node name="BackflipSequence" parent="StateMachine/Sequence3" index="4" instance=ExtResource( 31 )]

[node name="Sequence1Opener" parent="StateMachine" index="5" instance=ExtResource( 13 )]

[node name="Teleport" parent="StateMachine/Sequence1Opener" index="0" instance=ExtResource( 23 )]
teleport_in_animation = "jump_disappear"
teleport_out_animation = "descend"

[node name="SpawnTurrets" parent="StateMachine/Sequence1Opener" index="1" instance=ExtResource( 7 )]
weapon_levels = [ 0 ]
weapons = [ ExtResource( 10 ) ]
stagger = false

[node name="Wait" parent="StateMachine/Sequence1Opener" index="2" instance=ExtResource( 5 )]
animation = "upside_down_idle"
wait_forever = true
launch_stagger = true

[node name="Gravity" parent="StateMachine/Sequence1Opener/Wait" index="2"]
gravity = 0.0

[node name="Sequence2Opener" parent="StateMachine" index="6" instance=ExtResource( 13 )]

[node name="Teleport" parent="StateMachine/Sequence2Opener" index="0" instance=ExtResource( 23 )]
teleport_in_animation = "jump_disappear"
teleport_out_animation = "descend"

[node name="SpawnTurrets2" parent="StateMachine/Sequence2Opener" index="1" instance=ExtResource( 7 )]
weapon_levels = [ 0 ]
weapons = [ ExtResource( 19 ) ]
stagger = false

[node name="Wait" parent="StateMachine/Sequence2Opener" index="2" instance=ExtResource( 5 )]
animation = "upside_down_idle"
wait_forever = true
launch_stagger = true

[node name="Gravity" parent="StateMachine/Sequence2Opener/Wait" index="2"]
gravity = 0.0

[node name="Sequence3Opener" parent="StateMachine" index="7" instance=ExtResource( 13 )]

[node name="Teleport" parent="StateMachine/Sequence3Opener" index="0" instance=ExtResource( 23 )]
teleport_in_animation = "jump_disappear"
teleport_out_animation = "descend"

[node name="SpawnTurrets" parent="StateMachine/Sequence3Opener" index="1" instance=ExtResource( 7 )]
weapon_levels = [ 0 ]
weapons = [ ExtResource( 19 ) ]
stagger = false

[node name="Wait" parent="StateMachine/Sequence3Opener" index="2" instance=ExtResource( 5 )]
animation = "upside_down_idle"
wait_forever = true
launch_stagger = true

[node name="Gravity" parent="StateMachine/Sequence3Opener/Wait" index="2"]
gravity = 0.0

[node name="SpawnTurretSequence" parent="StateMachine" index="8" instance=ExtResource( 13 )]

[node name="Wait" parent="StateMachine/SpawnTurretSequence" index="0" instance=ExtResource( 5 )]

[node name="Timer" parent="StateMachine/SpawnTurretSequence/Wait" index="3"]
wait_time = 0.5

[node name="SpawnTurret" parent="StateMachine/SpawnTurretSequence" index="1" instance=ExtResource( 7 )]
weapon_levels = [ 0 ]
weapons = [ ExtResource( 12 ) ]
stagger = false

[node name="Wait2" parent="StateMachine/SpawnTurretSequence" index="2" instance=ExtResource( 5 )]

[node name="Timer" parent="StateMachine/SpawnTurretSequence/Wait2" index="3"]
wait_time = 0.5

[node name="Run" parent="StateMachine/SpawnTurretSequence" index="3" instance=ExtResource( 17 )]

[node name="Timer" parent="StateMachine/SpawnTurretSequence/Run" index="3"]
wait_time = 0.1

[node name="SpinBackflip" parent="StateMachine/SpawnTurretSequence" index="4" instance=ExtResource( 7 )]
weapon_levels = [ 0 ]
weapons = [ ExtResource( 24 ) ]
stagger = false

[node name="LaunchStagger" parent="StateMachine" index="9" instance=ExtResource( 4 )]
animation = "backflip"
next_state = "Stagger"
keep_staggering = false
distance_multiplier = 8.0
use_internal_duration = true

[node name="Stagger" parent="StateMachine" index="10" instance=ExtResource( 8 )]
keep_staggering = false
use_internal_duration = true
invincibility_buffer = 0.2

[node name="Timer" parent="StateMachine/Stagger" index="3"]
wait_time = 3.0

[node name="Die" parent="StateMachine" index="11" instance=ExtResource( 3 )]
animation = "exhausted"
queue_free_on_die = false

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -95.0543 )
shape = SubResource( 7 )

[node name="CollisionBox" parent="." index="4"]
position = Vector2( 0, -87.4849 )
shape = SubResource( 8 )
one_way_collision = false

[node name="ActorInterface" parent="." index="5"]
show = true

[node name="Stats" parent="." index="7"]
character_stats = ExtResource( 9 )

[node name="VisibilityEnabler2D" parent="." index="11"]
position = Vector2( -20.2886, -3.07483 )
scale = Vector2( 350.278, 343.952 )
[connection signal="entered" from="StateMachine/Die" to="StateMachine" method="kill_all_turrets"]

[editable path="Pivot"]

[editable path="DieCutscene"]

[editable path="DieCutscene/MSG_Interaction"]

[editable path="DieCutscene/MSG_Interaction/InteractionArea"]

[editable path="DieCutscene/ActivateSkill"]

[editable path="DieCutscene/CollisionTrigger"]

[editable path="DieCutscene/InteractionArea"]

[editable path="StateMachine/Sequence1Opener/Wait"]

[editable path="StateMachine/Sequence2Opener/Wait"]

[editable path="StateMachine/Sequence3Opener/Wait"]

[editable path="StateMachine/SpawnTurretSequence/Wait"]

[editable path="StateMachine/SpawnTurretSequence/Wait2"]

[editable path="StateMachine/SpawnTurretSequence/Run"]

[editable path="StateMachine/Stagger"]

[editable path="Hurtbox"]
